implemented address apis